--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   flutter_native_splash: ^2.0.4
   page_transition: ^2.0.5
+  url_launcher: ^6.0.20
   velocity_x: ^3.4.0
 
 
